# flake8-forelse

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  example.py  pyproject.toml  setup.cfg  setup.py
.circleci/: config.yml
.github/workflows/: codeql-analysis.yml  devskim.yml  lemming.yml  ossar.yml  python-publish.yml  scorecards.yml
src/flake8_forelse/: __init__.py
