[metadata]
name = flake8_forelse
version = attr: flake8_forelse.__version__
description = A Flake8 plugin which checks the use of for-else and while-else
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/koviubi56/flake8-forelse
author = Koviubi56
author_email = koviubi56@duck.com
license = GNU GPLv3+
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Development Status :: 5 - Production/Stable
    Environment :: Plugins
    Framework :: Flake8
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Typing :: Typed
keywords = flake8, plugin, for, else, forelse, while, whileelse

[options]
packages =
    flake8_forelse
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.package_data]
flake8_forelse = py.typed

[options.entry_points]
flake8.extensions =
    FE = flake8_forelse:ForElsePlugin

[pycodestyle]
ignore = E203

[pylama]
ignore = W503

[flake8]
extend-ignore = W503
extend-exclude = venv,*cache*
per-file-ignores =
    tests/*: S101

[isort]
profile = black
